<?xml version="1.0"?>
<package format="3">
  <name>wall_follower_pkg</name>
  <version>0.0.1</version>
  <description>Wall following node for drone using LiDAR</description>

  <maintainer email="you@todo.todo">you</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_msgs</depend>
  <depend>Eigen3</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>